--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,15 +1,53 @@
-@import './Styles/Global/colors.less';
+@import './Styles/Global/root.css';
 
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-        sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    --color-contrast: var(--color-black);
+    --surface-base: var(--color-gray-2);
+    --surface-primary: var(--color-gray-0);
+    --surface-secondary: var(--color-gray-3);
+    --surface-contrast: var(--color-gray-9);
+    --surface-green: var(--color-green-1);
+    --surface-red: var(--color-red-1);
+    --button-green: var(--color-green-6);
+    --border-input: var(--color-gray-4);
+    --border-low-contrast: var(--surface-secondary);
+    --border-high-contrast: var(--color-gray-8);
+    --text-tertiary-gray: var(--color-gray-6);
+    --text-red: var(--color-red-9);
+    --text-green: var(--color-green-9);
+    --text-primary: var(--color-black);
+    --text-contrast: var(--color-white);
+    --color-text: var(--color-contrast);
+    --fullscreen-app-offset: calc(100vh - var(--app-shell-header-height));
+    --fullscreen-app-offset-table: calc(100vh - var(--app-shell-header-height) - 200px);
+    --pb-saving-tabs-offset: 80px;
+    --chart-border-color: var(--color-dark-3);
+    --hover-dropdown-item: var(--color-gray-2);
+    --active-dropdown-item: var(--color-gray-3);
+    --menu-item-hover: var(--color-gray-2);
+    background-color: var(--surface-base);
+    font-family: var(--dynamic-font-family)
 }
 
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-        monospace;
+[app-color-schema=dark] body {
+    --color-contrast: var(--color-white);
+    --surface-base: var(--color-dark-9);
+    --surface-contrast: var(--color-dark-2);
+    --surface-primary: var(--color-dark-8);
+    --surface-secondary: var(--color-dark-7);
+    --surface-green: var(--color-green-9);
+    --surface-red: var(--color-red-5);
+    --border-input: var(--color-dark-4);
+    --border-high-contrast: var(--color-gray-2);
+    --text-tertiary-gray: var(--color-gray-5);
+    --text-red: var(--color-red-5);
+    --text-green: var(--color-green-5);
+    --text-primary: var(--color-white);
+    --text-contrast: var(--color-black);
+    --color-dimmed: var(--color-dark-4);
+    --chart-border-color: var(--color-dark-5);
+    --hover-dropdown-item: var(--color-dark-7);
+    --active-dropdown-item: var(--color-dark-9);
+    --menu-item-hover: var(--color-dark-6)
 }
