search function and tabs implemented

--- a/frontend/src/Styles/Components/Home-Nav.css
+++ b/frontend/src/Styles/Components/Home-Nav.css
@@ -10,7 +10,7 @@
     border-bottom: 1px solid var(--border-input);
     z-index: 1000;
     padding: 10px 15px;
-    transition: .5s ease-in-out;
+    transition: padding .25s ease-in-out;
 }
 
 .home-nav.compressed {
@@ -38,9 +38,8 @@
     padding: 10px;
     border: none;
     border-radius: 6px;
-    transition: background-color 0.2s ease, color 0.2s ease;
+    transition: background-color 0.2s ease, color 0.2s ease, padding .25s ease-in-out;
     cursor: pointer;
-    transition: .5s ease-in-out;
 }
 
 .home-nav>div:nth-child(2) button {
