--- a/frontend/src/Styles/Global/Universal.css
+++ b/frontend/src/Styles/Global/Universal.css
@@ -4,3 +4,14 @@
     color: var(--text-contrast);
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
 }
+
+.loading {
+    animation: spin 1s linear infinite;
+    display: inline-block;
+}
+
+@keyframes spin {
+    100% {
+        transform: rotate(360deg);
+    }
+}
