--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -106,32 +106,32 @@ div {
 
 /* Headings: a bit of extra weight/spacing */
 h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     line-height: 1.2;
 }
 
 h2 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     line-height: 1.3;
 }
 
 h3 {
-    font-size: 1.75rem;
+    font-size: 1.17rem;
     line-height: 1.3;
 }
 
 h4 {
-    font-size: 1.5rem;
+    font-size: 1rem;
     line-height: 1.4;
 }
 
 h5 {
-    font-size: 1.25rem;
+    font-size: 0.9rem;
     line-height: 1.4;
 }
 
 h6 {
-    font-size: 1rem;
+    font-size: 0.8rem;
     line-height: 1.5;
 }
 
@@ -139,6 +139,7 @@ h6 {
 p {
     margin-bottom: 1rem;
     line-height: 1.6;
+    font-size: 14px;
     color: var(--text-tertiary-gray);
 }
 
@@ -159,7 +160,7 @@ a:focus {
 button,
 button[type="button"],
 button[type="submit"] {
-    font-size: 1rem;
+    font-size: .9rem;
     padding: 0.6rem 1.2rem;
     background-color: var(--button-green);
     color: var(--text-contrast);
@@ -188,7 +189,7 @@ input,
 textarea,
 select {
     font-family: inherit;
-    font-size: 1rem;
+    font-size: .9rem;
     color: var(--text-primary);
     background-color: var(--surface-primary);
     border: 1px solid var(--border-input);
