--- a/frontend/src/Styles/Pages/Main-Pages/Company/Forecasting.css
+++ b/frontend/src/Styles/Pages/Main-Pages/Company/Forecasting.css
@@ -1,8 +1,5 @@
 .forecasting {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: var(--surface-base);
     text-align: center;
-    min-height: calc(100vh - 64px - 32.8px - 72.4px);
+    margin-top: 35vh;
 }
