--- a/frontend/src/Styles/Components/Tab-Foot.css
+++ b/frontend/src/Styles/Components/Tab-Foot.css
@@ -1,9 +1,9 @@
 .tabs-footer {
     display: flex;
-    position: sticky;
+    position: fixed;
     bottom: 0;
     gap: 10px;
-    padding: 10px;
+    padding: 10px 15px;
     width: 100%;
     overflow-x: auto;
     overflow-y: hidden;
