--- a/frontend/src/Styles/Global/Universal.css
+++ b/frontend/src/Styles/Global/Universal.css
@@ -22,3 +22,8 @@
         transform: rotate(360deg);
     }
 }
+
+.recharts-default-tooltip {
+    background-color: var(--surface-primary) !important;
+    border-radius: 8px;
+}
