--- a/frontend/src/Styles/Components/Dashboard/AssetAllocationPieChart.css
+++ b/frontend/src/Styles/Components/Dashboard/AssetAllocationPieChart.css
@@ -1,3 +1,6 @@
-.asset-allocation-chart-container{
-    
+.asset-allocation-chart-container {
+    padding: 15px;
+    background-color: var(--surface-primary);
+    border-radius: 8px;
+    height: 100%;
 }
