--- a/frontend/src/Styles/Components/ChatAI.css
+++ b/frontend/src/Styles/Components/ChatAI.css
@@ -2,6 +2,19 @@
     box-sizing: border-box;
 }
 
+.chat-ai-Button {
+    position: fixed;
+    bottom: 60px;
+    left: 40%;
+    right: 40%;
+    height: 50px;
+    opacity: .25;
+}
+
+.chat-ai-Button:hover {
+    opacity: 1;
+}
+
 .chat-ai-DialogOverlay {
     position: fixed;
     backdrop-filter: blur(3px);
@@ -90,4 +103,8 @@
     bottom: 20px;
     left: 20px;
     right: 20px;
+}
+
+#message-input {
+    resize: none;
 }
