--- a/frontend/src/Styles/Pages/Main-Pages/Company/Overview.css
+++ b/frontend/src/Styles/Pages/Main-Pages/Company/Overview.css
@@ -5,6 +5,7 @@
     grid-template-areas:
         "overview chart"
         "statistics chart";
+    grid-template-columns: 1fr 1fr;
     width: 100%;
 }
 
@@ -26,7 +27,6 @@
 
 .overview-container .chart {
     grid-area: chart;
-    width: 50vw;
 }
 
 .overview-container .chart-controls {
@@ -35,25 +35,13 @@
     gap: 15px;
     align-items: center;
     grid-template-columns: max-content max-content;
+    position: sticky;
+    top: calc(50px + 46.89px);
 }
 
-.overview-container .chart-period-button {
-    background: transparent;
-    color: var(--text-primary);
-    border: none;
-    transition: background-color 0.2s ease, color 0.2s ease;
-    cursor: pointer;
-    padding: 6px 10px;
-}
-
-.overview-container .chart-period-button:hover {
-    background-color: var(--hover-dropdown-item);
-    color: var(--text-primary);
-}
-
-.overview-container .chart-period-button:focus-visible {
-    outline: 2px solid var(--border-high-contrast);
-    outline-offset: 2px;
+.overview-container .chart-plot {
+    position: sticky;
+    top: calc(50px + 46.89px + 62.4px);
 }
 
 .overview-container .statistics {
