--- a/frontend/src/Styles/Components/ChatAI.css
+++ b/frontend/src/Styles/Components/ChatAI.css
@@ -102,7 +102,8 @@
     justify-content: space-between;
     align-items: center;
 }
-.history-buttons .chat-history-tabs .remove-chat-history:hover{
+
+.history-buttons .chat-history-tabs .remove-chat-history:hover {
     color: var(--text-red);
 }
 
@@ -116,6 +117,7 @@
 .chat-ai-message-preview {
     height: 100%;
     padding: 10px;
+    width: 100%;
     overflow-y: auto;
 }
 
@@ -180,4 +182,10 @@
 .chat-ai-copilot-container .chat-response .company-overviews .company-overview>div:first-child {
     font-size: 21px;
     font-weight: 600;
+}
+
+.chat-ai-message-input textarea.loading {
+    background-color: #f5f5f5;
+    cursor: not-allowed;
+    opacity: 0.6;
 }
