--- a/frontend/src/Styles/Global/Universal.css
+++ b/frontend/src/Styles/Global/Universal.css
@@ -26,6 +26,7 @@
 .main-nav a.active button,
 .home-nav a.active button,
 .financial-container .body .tabs a.active button,
+.investor-info-container .tabs a.active button,
 .overview-container .chart-period-button.active,
 .chat-ai-history button.active {
     background-color: var(--button-green);
