--- a/frontend/src/Styles/Components/ParameterChart.css
+++ b/frontend/src/Styles/Components/ParameterChart.css
@@ -1,5 +1,6 @@
 .chart-container {
     padding: 15px;
+    box-shadow: 0px 10px 10px -10px var(--table-border-color);
 }
 
 .chart-container .chart {
