--- a/frontend/src/Styles/Pages/Main-Pages/Company/Financial.css
+++ b/frontend/src/Styles/Pages/Main-Pages/Company/Financial.css
@@ -15,6 +15,23 @@
     gap: 15px;
 }
 
+.financial-container .body .filters {
+    padding: 15px;
+    padding-top: 0px;
+}
+
+.financial-container .body .filters>span>button {
+    width: 40px;
+}
+
+.financial-container .body .filters>span>button:first-child {
+    border-radius: 8px 0px 0px 8px;
+}
+
+.financial-container .body .filters>span>button:last-child {
+    border-radius: 0px 8px 8px 0px;
+}
+
 .financial-container .body .tabs button {
     min-width: 100px;
     padding: 7px 10px;
