--- a/frontend/src/Styles/Pages/Main-Pages/Company/InvestorInfo.css
+++ b/frontend/src/Styles/Pages/Main-Pages/Company/InvestorInfo.css
@@ -21,9 +21,34 @@
 }
 
 .investor-info-container .pdf-viewer-container {
+    display: grid;
+    grid-template-columns: 15% 1fr;
+}
+
+.investor-info-container .pdf-viewer-container .pdf-side-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.investor-info-container .pdf-viewer-container .pdf-side-menu span {
+    padding: 5px 10px;
+    border-radius: 8px 0px 0px 8px;
+}
+
+.investor-info-container .pdf-viewer-container .pdf-side-menu span:hover {
+    cursor: pointer;
+    background-color: var(--menu-item-hover);
+}
+
+.investor-info-container .pdf-viewer-container .pdf-side-menu span.active {
+    background-color: var(--button-green);
+}
+
+.investor-info-container .pdf-viewer {
     position: relative;
     border: 1px solid var(--border-input);
-    border-radius: 8px;
+    border-radius: 0px 8px 8px 0px;
     overflow: hidden;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
     background-color: var(--surface-primary);
@@ -32,7 +57,7 @@
     transition: box-shadow 0.3s ease;
 }
 
-.investor-info-container .pdf-viewer-container iframe {
+.investor-info-container .pdf-viewer iframe {
     width: 100%;
     height: 70vh;
     border: none;
@@ -57,6 +82,18 @@
 
 .investor-info-container .download-button:hover {
     background-color: var(--surface-green);
+}
+
+.investor-info-container .markdown-viewer {
+    border: 1px solid var(--border-input);
+    border-radius: 8px;
+    padding: 10px;
+    text-align: justify;
+    overflow: hidden;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
+    background-color: var(--surface-base);
+    height: 100%;
+    width: 100%;
 }
 
 .investor-info-container table td:first-child,
